# RandomStuff

./: README.md
Bash/: dlog.sh  dos2unix.sh  sedmv.sh  sleepsort.sh  unix2dos.sh
Bash/Brainfuck/: README.md  bf.sh  brainfuck.sh
Batch/: chcap.ps1  shell.bat
C/: doughnut.c  hacking.c
C++/Algorithms/: find.cpp  shape.cpp  simd.cpp  sort.cpp  topo.cpp
C++/CellAuto/: README.md  cellauto.cpp
C++/CellularAutomata/: README.md  cellauto.cpp
C++/WinUtils/: hotkey.c  insomnia.c
C++/include/: crc.hpp  fixint.hpp  format.hpp  io.hpp  rational.hpp  safeptr.hpp  strint.hpp
C/HexViewer/: README.md  hexv_linux.c  hexv_windows.c
C/Insomnia/: README.md  insomnia.c
C/WinUtils/: README.md  hotkey.c
Haskell/: bf.hs  bt.hs  field.hs  trunc.hs
Lua/: copy.lua  rshow.lua  show.lua
Python/: decode.py  randword.py  recode.py  rpn.py  shell.py  translate.py
Python/ANSI/: README.md  ansi.py  image.py  imcat.py  mixor.py  qr.py  sixel.py
Python/Algorithms/: bitonic.py  dijkstra.py  graph.py  montgomery.py  pierce.py  quaternion.py  rational.py
Python/Crawlers/: kemono.py  soundgasm.py
Python/Crypto/: cipherfour.py  ecc.py  enigma.py  rho.py  rsa.py  shamir.py  util.py  vigenere.py
Python/DeNCM/: README.md  dencm.py
Python/Experiments/: enigma.py  fifo.py  hamming.py  metro.py  poa.py  rho.py  vigenere.py
Python/IMFTP/: README.md  cipher.py  imftp.py  imftp.sh  messager.py  pyproject.toml  test.sh
Python/IMFTP/src/imftp/: __main__.py  backend.py  cli.py  core.py  cryption.py  frontend.py  gui.py  interfaces.py  service.py
Python/IO/: pipe.py  protocol.py
Python/Lambda/: tree.py  vect.py
Python/Lib/: bilibili.py  ecc.py  matrix.py  pnc.py  quaternion.py  rational.py  rsa.py  shell.py  twisort.py  views.py
Python/Misc/: dijkstra.py  (+4 more)
Python/VidXXC/: README.md  core.py  pyproject.toml  viddec.py  videnc.py
Python/VidXXC/src/vidxxc/: __main__.py  cli.py  core.py  gui.py  viddec.py  videnc.py
Verilog/: sm4.sv
(+70 files in other folders)
